--- a/kattis-tool.cabal
+++ b/kattis-tool.cabal
@@ -21,9 +21,11 @@ executable kat
                      , ansi-wl-pprint >= 0.6.8
                      , bytestring >= 0.10.8
                      , conduit >= 1.3
+                     , data-default >= 0.7.1
                      , directory >= 1.3
                      , hashable >= 1.2
                      , http-conduit >= 2.3
+                     , monad-loops >= 0.4
                      , process >= 1.6
                      , text >= 1.2
                      , time >= 1.8
